--- a/app/src/main/res/layout/activity_new_task.xml
+++ b/app/src/main/res/layout/activity_new_task.xml
@@ -4,174 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NewTaskActivity"
-    android:padding="8dp">
+    android:padding="8dp"
+    tools:context=".NewTaskActivity">
 
     <TextView
         android:id="@+id/titleTextView"
+        style="@android:style/TextAppearance.DeviceDefault.Large"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:text="@string/task_title"
-        app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/priorityEditText" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/titleEditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="24dp"
-        android:ems="10"
-        android:inputType="textMultiLine"
-        app:layout_constraintBaseline_toBaselineOf="@+id/titleTextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/titleTextView"
         android:autofillHints="title"
-        android:hint="@string/task_title_desc"/>
-
-    <TextView
-        android:id="@+id/outcomeTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/task_outcome"
-        app:layout_constraintStart_toStartOf="@+id/titleTextView"
-        app:layout_constraintTop_toBottomOf="@+id/titleEditText" />
-
-    <EditText
-        android:id="@+id/outcomeEditText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="24dp"
         android:ems="10"
+        android:hint="@string/task_title_desc"
         android:inputType="textMultiLine"
-        app:layout_constraintBaseline_toBaselineOf="@+id/outcomeTextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/outcomeTextView"
-        android:autofillHints="effect"
-        android:hint="@string/task_outcome_desc"/>
-
-    <TextView
-        android:id="@+id/actionTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/task_first_action"
-        app:layout_constraintStart_toStartOf="@+id/outcomeTextView"
-        app:layout_constraintTop_toBottomOf="@+id/outcomeEditText" />
-
-    <EditText
-        android:id="@+id/actionEditText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="24dp"
-        android:ems="10"
-        android:inputType="textMultiLine"
-        app:layout_constraintBaseline_toBaselineOf="@+id/actionTextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/actionTextView"
-        android:autofillHints="activity"
-        android:hint="@string/task_action_desc"/>
-
-    <TextView
-        android:id="@+id/basketTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/task_basket"
-        app:layout_constraintStart_toStartOf="@+id/actionTextView"
-        app:layout_constraintTop_toBottomOf="@+id/actionEditText" />
-
-    <Spinner
-        android:id="@+id/basketSpinner"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="24dp"
-        app:layout_constraintBottom_toBottomOf="@+id/basketTextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/basketTextView"
-        app:layout_constraintTop_toTopOf="@+id/basketTextView" />
-
-    <TextView
-        android:id="@+id/categoryTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="@string/task_category"
-        app:layout_constraintStart_toStartOf="@+id/basketTextView"
-        app:layout_constraintTop_toBottomOf="@+id/basketSpinner" />
-
-    <EditText
-        android:id="@+id/categoryEditText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="24dp"
-        android:ems="10"
-        android:inputType="textMultiLine"
-        app:layout_constraintBaseline_toBaselineOf="@+id/categoryTextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/categoryTextView"
-        android:autofillHints="category"
-        android:hint="@string/task_category_desc"/>
-
-    <CheckBox
-        android:id="@+id/reminderCheckBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="@string/task_set_reminder"
-        app:layout_constraintStart_toStartOf="@+id/categoryTextView"
-        app:layout_constraintTop_toBottomOf="@+id/categoryEditText" />
-
-    <TextView
-        android:id="@+id/reminderTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/task_reminder_set_at"
-        app:layout_constraintStart_toStartOf="@+id/reminderCheckBox"
-        app:layout_constraintTop_toBottomOf="@+id/reminderCheckBox"
-        android:visibility="invisible"/>
-
-    <TextView
-        android:id="@+id/dateTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:text="@string/task_date_placeholder"
-        app:layout_constraintBaseline_toBaselineOf="@+id/reminderTextView"
-        app:layout_constraintStart_toEndOf="@+id/reminderTextView"
-        android:visibility="invisible"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />
 
     <!-- add pickable priority from A to E -->
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="96dp"
-        android:text="Priority"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/priorityEditText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="24dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView"
-        android:autofillHints="category"
-        android:hint="A to E" />
 
     <Button
         android:id="@+id/buttonSave"
@@ -185,13 +44,79 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageButton
-        android:id="@+id/imageButton"
+    <TextView
+        android:id="@+id/priorityTextView"
+        style="@android:style/TextAppearance.DeviceDefault.Large"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/task_priority"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_priority_a" />
+        app:layout_constraintTop_toBottomOf="@+id/titleEditText" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/priorityTextView"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/buttonA"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:scaleType="centerCrop"
+            android:background="@android:color/background_light"
+            app:srcCompat="@drawable/ic_priority_a"
+            android:adjustViewBounds="true"
+            android:onClick="onPriorityButtonClick"/>
+
+        <ImageButton
+            android:id="@+id/buttonB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:scaleType="centerCrop"
+            android:background="@android:color/background_light"
+            app:srcCompat="@drawable/ic_priority_b"
+            android:adjustViewBounds="true"
+            android:onClick="onPriorityButtonClick"/>
+
+        <ImageButton
+            android:id="@+id/buttonC"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:scaleType="centerCrop"
+            android:background="@android:color/background_light"
+            app:srcCompat="@drawable/ic_priority_c"
+            android:adjustViewBounds="true"
+            android:onClick="onPriorityButtonClick"/>
+
+        <ImageButton
+            android:id="@+id/buttonD"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:scaleType="centerCrop"
+            android:background="@android:color/background_light"
+            app:srcCompat="@drawable/ic_priority_d"
+            android:adjustViewBounds="true"
+            android:onClick="onPriorityButtonClick"/>
+
+        <ImageButton
+            android:id="@+id/buttonE"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:scaleType="centerCrop"
+            android:background="@android:color/background_light"
+            app:srcCompat="@drawable/ic_priority_e"
+            android:adjustViewBounds="true"
+            android:onClick="onPriorityButtonClick"/>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
